--- a/dream-cc/dream-cc-core/tsconfig.json
+++ b/dream-cc/dream-cc-core/tsconfig.json
@@ -3,20 +3,7 @@
     "declaration": false,
     "target": "ES6",
     "module": "ES6",
-    // ... existing code ...
-    "strict": true, // 开启所有严格类型检查选项
-    "strictNullChecks": true, // 开启严格的 null 检查
-    "strictFunctionTypes": true, // 开启严格的函数类型检查
-    "strictBindCallApply": true, // 开启严格的 bind、call 和 apply 方法检查
-    "strictPropertyInitialization": true, // 开启严格的属性初始化检查
-    "alwaysStrict": true, // 以严格模式解析并为每个源文件生成 "use strict"
-    "noImplicitAny": true, // 不允许隐式的 any 类型
-    "noImplicitThis": true, // 不允许隐式的 this 类型为 any
-    "noUnusedLocals": true, // 不允许有未使用的局部变量
-    "noUnusedParameters": true, // 不允许有未使用的参数
-    "noImplicitReturns": true, // 不允许函数有隐式的返回值
-    "noFallthroughCasesInSwitch": true // 不允许 switch 语句贯穿
-    // ... existing code ...
+    "strict": false, // 开启所有严格类型检查选项
   },
   "include": [
     "./src/**/*",
